Update portfolio content and homepage preview

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <main>
     <section class="hero container">
       <div class="hero-copy">
-        <p class="eyebrow">Automation · Cybersecurity · Hands-on support</p>
-        <h1>Automation and cybersecurity that make small businesses feel enterprise-grade.</h1>
+        <p class="eyebrow">Automation + Diagnostics + Hands-on support</p>
+        <h1>Automation that finds the right signal fast and keeps systems current.</h1>
         <p class="lede">
-          I build pragmatic tools, harden systems, and remove tedious work so owners can focus on revenue, not reboots.
+          I optimize search, visualization, and update pipelines so engineers stop hunting and start solving.
         </p>
         <div class="hero-actions">
           <a class="btn primary" href="contact.html">Request a free assessment</a>
@@ -54,31 +54,31 @@
           <div class="card-head">
             <div>
               <p class="tiny-label">Live snapshot</p>
-              <strong>Ops health</strong>
+              <strong>Automation health</strong>
             </div>
             <span class="status-pill success">Stable</span>
           </div>
           <ul class="hero-metrics">
             <li>
               <div>
-                <p class="tiny-label">Automation</p>
-                <strong>42 tasks/night</strong>
+                <p class="tiny-label">Bosch</p>
+                <strong>CAN signals traced</strong>
               </div>
-              <span class="trend up">+18%</span>
+              <span class="trend up">Hours saved/lookup</span>
             </li>
             <li>
               <div>
-                <p class="tiny-label">Vuln scan</p>
-                <strong>0 open highs</strong>
+                <p class="tiny-label">Endress</p>
+                <strong>VM updates stabilized</strong>
               </div>
-              <span class="trend even">Clean</span>
+              <span class="trend even">No stalled runs</span>
             </li>
             <li>
               <div>
-                <p class="tiny-label">Incidents</p>
-                <strong>1 triaged</strong>
+                <p class="tiny-label">Certification</p>
+                <strong>CompTIA ITF+</strong>
               </div>
-              <span class="trend up">15m MTTR</span>
+              <span class="trend up">Open credential</span>
             </li>
           </ul>
           <div class="hero-foot">
@@ -174,29 +174,29 @@
       <div class="section-head">
         <p class="eyebrow">Portfolio preview</p>
         <h2>Recent builds and fixes.</h2>
-        <p class="muted">More details live on the portfolio page.</p>
+        <p class="muted">Bosch CAN diagnostics, Endress VM automation, and the ITF+ credential.</p>
       </div>
       <div class="card-grid">
         <article class="card project-card">
-          <div class="tiny-label">Automation</div>
-          <h3>Ops reporting bot</h3>
-          <p class="muted">Python + Sheets tool that emails exec-ready scorecards every morning.</p>
-          <div class="meta">Result: 10 hours/week saved</div>
-          <a class="text-link" href="portfolio.html#reporting-bot">See details</a>
+          <div class="tiny-label">Diagnostics Automation</div>
+          <h3>Bosch - CAN signal intelligence</h3>
+          <p class="muted">Automated lookup, reciprocal tracing, and graphing for proprietary CAN sensor signals.</p>
+          <div class="meta">Result: Hours saved per lookup</div>
+          <a class="text-link" href="portfolio.html#bosch-signal-search">See details</a>
         </article>
         <article class="card project-card">
-          <div class="tiny-label">Security</div>
-          <h3>Zero-trust starter</h3>
-          <p class="muted">Audit, MFA rollout, and patch cadence for a 15-person professional services firm.</p>
-          <div class="meta">Result: Closed 9 critical gaps</div>
-          <a class="text-link" href="portfolio.html#zero-trust">See details</a>
+          <div class="tiny-label">Automation Reliability</div>
+          <h3>Endress - VM update pipeline</h3>
+          <p class="muted">Debugged and hardened legacy automation so VM software updates ran predictably.</p>
+          <div class="meta">Result: No stalled runs, less babysitting</div>
+          <a class="text-link" href="portfolio.html#endress-vm-automation">See details</a>
         </article>
         <article class="card project-card">
-          <div class="tiny-label">Workflow</div>
-          <h3>Service desk setup</h3>
-          <p class="muted">Ticketing, device inventory, and backup checks wired into a single dashboard.</p>
-          <div class="meta">Result: 2x faster resolutions</div>
-          <a class="text-link" href="portfolio.html#service-desk">See details</a>
+          <div class="tiny-label">Certification</div>
+          <h3>CompTIA ITF+</h3>
+          <p class="muted">Credential covering core computing, networking, security, and troubleshooting.</p>
+          <div class="meta">Result: Foundations verified</div>
+          <a class="text-link" href="portfolio.html#cert-itf-plus">Open credential</a>
         </article>
       </div>
     </section>
@@ -237,3 +237,5 @@
   <script src="assets/script.js"></script>
 </body>
 </html>
+
+
