--- a/portfolio.html
+++ b/portfolio.html
@@ -35,163 +35,94 @@
     <section class="page-hero container">
       <div>
         <p class="eyebrow">Proof of work</p>
-        <h1>Projects that saved time, hardened systems, and kept teams moving.</h1>
-        <p class="lede">Every project includes a clear problem, measurable outcome, and documented handoff.</p>
+        <h1>Automation and diagnostics that give engineers their time back.</h1>
+        <p class="lede">Real projects only: signal intelligence at Bosch, resilient VM automation at Endress, plus credentials you can open.</p>
       </div>
     </section>
 
     <section class="section container portfolio-list">
-      <article class="project-detail" id="reporting-bot">
+      <article class="project-detail" id="bosch-signal-search">
         <div class="project-head">
-          <p class="tiny-label">Automation</p>
-          <h2>Ops reporting bot</h2>
-          <p class="muted">Problem: Leadership waited days for clean field performance numbers.</p>
+          <p class="tiny-label">Diagnostics Automation</p>
+          <h2>Bosch - CAN signal intelligence</h2>
+          <p class="muted">Problem: Engineers spent hours traversing block diagrams to find sensor connections and dependencies.</p>
         </div>
         <div class="project-body">
           <div class="project-meta">
             <p><strong>What I built</strong></p>
-            <p class="muted">Python + Google Sheets job that cleans data, highlights anomalies, and emails exec-ready scorecards nightly.</p>
+            <p class="muted">Optimized and automated proprietary tooling to search navigable block diagrams and surface CAN sensor signals with reciprocal links.</p>
             <p><strong>Result</strong></p>
-            <p class="muted">80% time reduction on weekly reports; alerts now trigger within an hour.</p>
+            <p class="muted">Hours saved per lookup; investigations standardized with traceable signal paths.</p>
             <p><strong>Tech</strong></p>
-            <p class="muted">Python, Pandas, Google Sheets API, cron, Gmail API</p>
+            <p class="muted">Bosch diagnostics stack, automated search and graphing workflows.</p>
           </div>
           <div class="project-panel">
             <h4>Before</h4>
             <ul>
-              <li>Manual CSV cleanup every Thursday</li>
-              <li>No single truth for metrics</li>
-              <li>Surprises at weekly reviews</li>
+              <li>Manual up and down navigation through large block diagrams</li>
+              <li>Hard to see which signals impacted each other</li>
+              <li>Plotting signals like WSS or SAS required manual setup</li>
             </ul>
             <h4>After</h4>
             <ul>
-              <li>Daily scorecards in inbox by 7am</li>
-              <li>Auto-flagged anomalies</li>
-              <li>Versioned logic with doc handoff</li>
+              <li>Search finds the exact signal anywhere in the database with reciprocal tracing</li>
+              <li>All connections to a signal retrieved with impact context</li>
+              <li>Auto-generated graphs visualize signals for faster diagnosis</li>
             </ul>
           </div>
         </div>
       </article>
 
-      <article class="project-detail" id="zero-trust">
+      <article class="project-detail" id="endress-vm-automation">
         <div class="project-head">
-          <p class="tiny-label">Cybersecurity</p>
-          <h2>Zero-trust starter</h2>
-          <p class="muted">Problem: 15-person services firm had flat network and shared passwords.</p>
+          <p class="tiny-label">Automation Reliability</p>
+          <h2>Endress - Legacy VM update pipeline</h2>
+          <p class="muted">Problem: A legacy automation pipeline for VM updates was brittle and required manual babysitting.</p>
         </div>
         <div class="project-body">
           <div class="project-meta">
             <p><strong>What I built</strong></p>
-            <p class="muted">Audit, MFA rollout, password policies, and patch cadence with monthly reviews.</p>
+            <p class="muted">Debugged and optimized the pipeline that updated each virtual machine with current software, improving sequencing and error handling.</p>
             <p><strong>Result</strong></p>
-            <p class="muted">Closed nine critical gaps; phishing risk dropped after MFA training.</p>
+            <p class="muted">Updates ran predictably with less downtime and hands-on intervention.</p>
             <p><strong>Tech</strong></p>
-            <p class="muted">Microsoft 365, Intune, Azure AD, Nessus, PowerShell, JumpCloud</p>
+            <p class="muted">Legacy automation stack across virtualized environments; logging and retry controls.</p>
           </div>
           <div class="project-panel">
             <h4>Before</h4>
             <ul>
-              <li>Shared credentials for core apps</li>
-              <li>No patch schedule or logging</li>
-              <li>Unknown device inventory</li>
+              <li>Update runs stalled across VMs</li>
+              <li>Minimal logging and unclear failure points</li>
+              <li>Engineers supervising each rollout</li>
             </ul>
             <h4>After</h4>
             <ul>
-              <li>MFA on all critical systems</li>
-              <li>Documented offboarding flow</li>
-              <li>Monthly patch and audit cycle</li>
+              <li>Stable sequencing across virtual machines</li>
+              <li>Clear logs and safeguards for reruns</li>
+              <li>Hands-off updates with documented steps</li>
             </ul>
           </div>
         </div>
       </article>
 
-      <article class="project-detail" id="service-desk">
+      <article class="project-detail" id="cert-itf-plus">
         <div class="project-head">
-          <p class="tiny-label">Workflow</p>
-          <h2>Service desk setup</h2>
-          <p class="muted">Problem: Tickets were buried in email; no device visibility.</p>
+          <p class="tiny-label">Certification</p>
+          <h2>CompTIA IT Fundamentals (ITF+)</h2>
+          <p class="muted">Credential covering core computing, networking, security, and troubleshooting.</p>
         </div>
         <div class="project-body">
           <div class="project-meta">
-            <p><strong>What I built</strong></p>
-            <p class="muted">Helpdesk queue, device inventory, and uptime checks with playbooks for incidents.</p>
-            <p><strong>Result</strong></p>
-            <p class="muted">First-response SLAs cut in half; outages triaged in one view.</p>
-            <p><strong>Tech</strong></p>
-            <p class="muted">Freshservice, PowerShell, Intune, UptimeRobot, Mermaid diagrams</p>
+            <p><strong>Credential</strong></p>
+            <p class="muted">Stored in assets for verification.</p>
+            <p><strong>Focus</strong></p>
+            <p class="muted">Foundational IT operations supporting automation and reliability work.</p>
           </div>
           <div class="project-panel">
-            <h4>Before</h4>
+            <h4>Open certificate</h4>
             <ul>
-              <li>Support scattered across email threads</li>
-              <li>No map of devices or owners</li>
-              <li>Slow outage response</li>
-            </ul>
-            <h4>After</h4>
-            <ul>
-              <li>Intake form + auto-routing rules</li>
-              <li>Device and owner inventory</li>
-              <li>Dashboards for uptime and backups</li>
-            </ul>
-          </div>
-        </div>
-      </article>
-
-      <article class="project-detail" id="monitoring">
-        <div class="project-head">
-          <p class="tiny-label">Monitoring</p>
-          <h2>System monitoring script</h2>
-          <p class="muted">Problem: No early warning on resource spikes.</p>
-        </div>
-        <div class="project-body">
-          <div class="project-meta">
-            <p><strong>What I built</strong></p>
-            <p class="muted">Lightweight agent that tracks CPU, memory, disk, and services, pushing alerts to Teams.</p>
-            <p><strong>Result</strong></p>
-            <p class="muted">Caught two outages before they hit customers; added incident runbooks.</p>
-            <p><strong>Tech</strong></p>
-            <p class="muted">Python, PowerShell, Windows Task Scheduler, Teams webhooks</p>
-          </div>
-          <div class="project-panel">
-            <h4>Before</h4>
-            <ul>
-              <li>Surprise outages with no logs</li>
-              <li>Reactive fixes only</li>
-            </ul>
-            <h4>After</h4>
-            <ul>
-              <li>Hourly health snapshots</li>
-              <li>Alerting with triage steps</li>
-            </ul>
-          </div>
-        </div>
-      </article>
-
-      <article class="project-detail" id="network-diagram">
-        <div class="project-head">
-          <p class="tiny-label">Networking</p>
-          <h2>Office network refresh</h2>
-          <p class="muted">Problem: Guests and staff shared a flat, unreliable network.</p>
-        </div>
-        <div class="project-body">
-          <div class="project-meta">
-            <p><strong>What I built</strong></p>
-            <p class="muted">Segmented Wi-Fi/VLAN design, documented diagrams, and monitored uptime.</p>
-            <p><strong>Result</strong></p>
-            <p class="muted">No guest bleed-through; uptime improved with clear escalation paths.</p>
-            <p><strong>Tech</strong></p>
-            <p class="muted">UniFi, VLANs, DNS records, Backups, Diagramming</p>
-          </div>
-          <div class="project-panel">
-            <h4>Before</h4>
-            <ul>
-              <li>Guest traffic on production network</li>
-              <li>No topology documentation</li>
-            </ul>
-            <h4>After</h4>
-            <ul>
-              <li>Isolated guest SSIDs</li>
-              <li>Diagram + runbooks for changes</li>
+              <li><a class="text-link" href="assets/CompTIA%20IT%20Fundamentals%20(ITF+)%20Certification%20certificate.pdf" target="_blank" rel="noopener">View ITF+ PDF</a></li>
+              <li>Includes verification of fundamentals</li>
             </ul>
           </div>
         </div>
