Update Mobile compatability and Added form functionality for Requests

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <section class="page-hero container">
       <div>
         <p class="eyebrow">Contact</p>
-        <h1>Tell me the problem. I’ll respond with a concrete next step.</h1>
+        <h1>Tell me the problem. I'll respond with a concrete next step.</h1>
         <p class="lede">Available for small business projects, consultations, and automation work.</p>
         <div class="badge-row">
           <span class="badge">Fast replies</span>
@@ -47,7 +47,7 @@
 
     <section class="section container contact-grid">
       <div class="card">
-        <form id="contact-form" class="contact-form">
+        <form id="contact-form" class="contact-form" action="https://formspree.io/f/xzznajyd" method="POST">
           <label>
             Name
             <input type="text" name="name" placeholder="Your name" required>
@@ -69,6 +69,7 @@
             <textarea name="project" rows="4" placeholder="What do you need?" required></textarea>
           </label>
           <button class="btn primary" type="submit">Send message</button>
+          <p class="muted form-status" data-form-status></p>
           <p class="muted tiny-label form-note">You can also email directly: coltmeltonwork@gmail.com or call 810-479-6235</p>
         </form>
       </div>
@@ -104,7 +105,7 @@
         <a href="contact.html">Contact</a>
       </div>
       <div class="footer-meta">
-        <p class="muted">Based in Michigan · Remote friendly</p>
+        <p class="muted">Based in Michigan - Remote friendly</p>
         <p class="muted">Email: coltmeltonwork@gmail.com</p>
         <p class="muted">Phone: 810-479-6235</p>
       </div>
@@ -114,3 +115,8 @@
   <script src="assets/script.js"></script>
 </body>
 </html>
+
+
+
+
+
