Added Reviews and(hopefully) optomized mobile compat.

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
           <a href="services.html">Services</a>
           <a href="portfolio.html">Portfolio</a>
           <a href="about.html">About</a>
+          <a href="reviews.html">Reviews</a>
           <a class="active" href="contact.html">Contact</a>
         </div>
         <a class="btn ghost" href="contact.html">Free assessment</a>
@@ -47,7 +48,7 @@
 
     <section class="section container contact-grid">
       <div class="card">
-        <form id="contact-form" class="contact-form" action="https://formspree.io/f/xzznajyd" method="POST">
+        <form id="contact-form" class="contact-form" action="https://formspree.io/f/xzznajyd" method="POST" data-formspree>
           <label>
             Name
             <input type="text" name="name" placeholder="Your name" required>
@@ -87,6 +88,47 @@
         <p>Open for small business projects, audits, and automation builds.</p>
       </div>
     </section>
+
+    <section class="section container">
+      <div class="card">
+        <p class="tiny-label">Reviews</p>
+        <h2>Leave a short review</h2>
+        <p class="muted">Share how the engagement went so others know what to expect.</p>
+        <form id="review-form" class="contact-form" action="https://formspree.io/f/xzznajyd" method="POST" data-formspree>
+          <input type="hidden" name="form_type" value="client_review">
+          <label>
+            Name
+            <input type="text" name="name" placeholder="Your name" required>
+          </label>
+          <label>
+            Company (optional)
+            <input type="text" name="company" placeholder="Company name">
+          </label>
+          <label>
+            Role (optional)
+            <input type="text" name="role" placeholder="Your role">
+          </label>
+          <label>
+            Rating
+            <select name="rating" required>
+              <option value="">Select rating</option>
+              <option value="5">5 - Excellent</option>
+              <option value="4">4 - Great</option>
+              <option value="3">3 - Good</option>
+              <option value="2">2 - Needs improvement</option>
+              <option value="1">1 - Poor</option>
+            </select>
+          </label>
+          <label>
+            Review
+            <textarea name="review" rows="4" placeholder="What worked well? What could be better?" required></textarea>
+          </label>
+          <button class="btn primary" type="submit">Submit review</button>
+          <p class="muted form-status" data-form-status></p>
+          <p class="muted tiny-label form-note">Thanks for taking a minute to share feedback.</p>
+        </form>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
@@ -102,6 +144,7 @@
         <a href="services.html">Services</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="about.html">About</a>
+        <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </div>
       <div class="footer-meta">
