--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
           <a href="services.html">Services</a>
           <a class="active" href="portfolio.html">Portfolio</a>
           <a href="about.html">About</a>
+          <a href="reviews.html">Reviews</a>
           <a href="contact.html">Contact</a>
         </div>
         <a class="btn ghost" href="contact.html">Free assessment</a>
@@ -152,6 +153,7 @@
         <a href="services.html">Services</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="about.html">About</a>
+        <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </div>
       <div class="footer-meta">
